# odido-portfolio

./: README.md
feedback-analyser/: synthetic_data.py
feedback-analyser/config/: category_keywords.json  pyproject.toml  requirements.txt  streamlit_requirements.txt  topic_schema.json
feedback-analyser/data/sample/: feedback_synthetische_data_500_clear_comments_final.xlsx
feedback-analyser/data/sample/reference/: dutch_topics.txt
feedback-analyser/docs/Memory_bank/: systemPatterns.md  techContext.md
feedback-analyser/notebooks/: process_new_data_notebook.ipynb
feedback-analyser/src/: config_loader.py  explore_categories.py  huggingface_preprocessing.py  llm_preprocessing.py  sentiment_visualizations.py  streamlit_app.py  visualizations.py
odido-nova-langfuse-evaluation/: CODE_OVERVIEW.md  LICENSE.txt  METRICS.md  README.md
odido-nova-langfuse-evaluation/docs/: evaluation-lib.md  traces-external-evaluation.md
odido-nova-langfuse-evaluation/docs/diagrams/: external-eval.mmd  flow-overview.mmd  retrieval-rerank-judge.mmd
odido-nova-langfuse-evaluation/evaluation/: create_datasets.py  evallib.py  nova_external_test.py
odido-nova-langfuse-evaluation/evaluation/configuration/: benchmark.toml  experiment.toml  general.toml
