[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feedback-analysis"
version = "0.1.0"
description = "Feedback analysis using BERTopic and BERT fine-tuning"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "llvmlite>=0.43.0",
    "pandas",
    "openpyxl",
    "numpy",
    "matplotlib",
    "plotly",
    "sentence-transformers",
    "openai>=1.1.0",
    "tqdm",
    "scikit-learn",
    "xlrd",
    "hdbscan",
    "scipy",
    "umap-learn",
    "bertopic>=0.15.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.12.0",
    "seaborn>=0.12.0",
]

[tool.uv]
exclude = [] 